# TaskHub

./: .gitignore  README.md  pyproject.toml
backend/auth/: config.py  main.py
backend/auth/middleware/: logging.py
backend/auth/routers/: auth_router.py  service.py
backend/auth/utils/: JWT.py  supabase.py  token.py  user.py
backend/core/: logging.py
backend/gateway/: config.py  main.py
backend/gateway/clients/: auth_client.py
backend/gateway/log/: logger.py
backend/gateway/middleware/: auth_requiried.py  logging.py  master_user.py
backend/gateway/resilience/: circuit_breaker.py
backend/gateway/routers/: auth.py
backend/gateway/utils/: headers.py
